Fixed mobile phone layout issue

--- a/styles/source/styles.scss
+++ b/styles/source/styles.scss
@@ -201,18 +201,6 @@ li.nav-item:hover a {
     }
 }
 
-@keyframes blink-caret {
-    0% { 
-        border-color: transparent 
-    }
-    50% { 
-        border-color: white; 
-    }
-    100% { 
-        border-color: transparent 
-    }
-}
-
 //====================================================================================================
 // Media Queries.
 //====================================================================================================
